# mlir_tutorial_DCE

./: CMakeLists.txt  README.md
docker/: Dockerfile  README.md  docker_build.sh
docs/: 00_overview.md  01_dialect.md  02_ops.md  03_passes.md  04_lowering.md
examples/: intro.toy  pipeline.sh
include/: ToyCSEPass.h  ToyCanonicalizePass.h  ToyConstantFoldPass.h  ToyDCEPass.h  ToyShapeInferencePass.h  ToyToArithPass.h  ToyToLinalgPass.h
include/toy/: ToyDialect.h  ToyOps.h
include/toy/Transforms/: Passes.h
passes/: CMakeLists.txt  CanonicalizePass.cpp  Passes.cpp  ShapeInferencePass.cpp  ToyCSEPass.cpp  ToyConstantFoldPass.cpp  ToyDCEPass.cpp  ToyToArithPass.cpp  ToyToLinalgPass.cpp
scripts/: docker_run.sh  run_tests.sh
test/: README.md  toy-canonicalize.mlir  toy-constant-fold.mlir  toy-cse.mlir  toy-dce.mlir  toy-lowering.mlir  toy-shape-inference.mlir
tools/: CMakeLists.txt  toy-opt.cpp
toy/: CMakeLists.txt  DialectRegistration.cpp  Ops.cpp  ToyDialect.td  ToyOps.td
